force-app/main/default/objects/Factura__c/fields/CP__c.field-meta.xml
<CustomField>
    <fullName>CP__c</fullName>
    <label>Código postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>