force-app/main/default/objects/Factura__c/fields/ID_Contrato__c.field-meta.xml
<CustomField>
    <fullName>ID_Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>