force-app/main/default/objects/Factura__c/fields/ID_Factura__c.field-meta.xml
<CustomField>
    <fullName>ID_Factura__c</fullName>
    <label>ID Factura</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>