force-app/main/default/objects/Factura__c/fields/ID_Factura_Original__c.field-meta.xml
<CustomField>
    <fullName>ID_Factura_Original__c</fullName>
    <label>ID Factura Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>