force-app/main/default/objects/Factura__c/fields/ID_Transaccion__c.field-meta.xml
<CustomField>
    <fullName>ID_Transaccion__c</fullName>
    <label>ID Transacción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>