force-app/main/default/objects/Factura__c/fields/NIF__c.field-meta.xml
<CustomField>
    <fullName>NIF__c</fullName>
    <label>NIF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>