force-app/main/default/objects/Factura__c/fields/Nombre_Titular__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Titular__c</fullName>
    <label>Nombre Titular</label>
    <length>255</length>
    <type>Text</type>
</CustomField>