force-app/main/default/objects/Factura__c/fields/Periodo_Factura__c.field-meta.xml
<CustomField>
    <fullName>Periodo_Factura__c</fullName>
    <label>Periodo Factura</label>
    <type>DateTime</type>
</CustomField>