force-app/main/default/objects/Factura__c/fields/Total_Factura__c.field-meta.xml
<CustomField>
    <fullName>Total_Factura__c</fullName>
    <label>Total Factura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>